Fix some deprecated api usages